PHOENIX-6557 Fix code problems flagged by SpotBugs as High priority